--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
-        <a href="https://docs.google.com/document/d/e/2PACX-1vQ5-Fo-lMWON_xbk2KvlYRAZx7HyL_SkSlnH1mcqOfiI45EwwqDGAuhSI-ynQCPkA/pub?embedded=true" width="640" height="480" allow="autoplay"" target="_blank" rel="noopener noreferrer" style="color:#FFDB70">Download Document</a>
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ5-Fo-lMWON_xbk2KvlYRAZx7HyL_SkSlnH1mcqOfiI45EwwqDGAuhSI-ynQCPkA/pub?embedded=true" allow="autoplay"" width="100%" height="800px"></iframe>
+        <a href="https://drive.google.com/file/d/1PU-RTWr3-7iqMvayK9lAoHiawJjaF93-/view?usp=sharing" width="640" height="480" allow="autoplay"" target="_blank" rel="noopener noreferrer" style="color:#FFDB70">Download Document</a>
+        <iframe src="https://drive.google.com/file/d/1PU-RTWr3-7iqMvayK9lAoHiawJjaF93-/view?usp=sharing" allow="autoplay"" width="100%" height="800px"></iframe>
 
         <!-- <section class="timeline">
 
